--- a/deploy-templates/templates/ing.yaml
+++ b/deploy-templates/templates/ing.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sb
 spec:
   rules:
-    - host: edpDefault
+    - host: springboot-expose-436dbe91-expose-dev.development.krci-dev.cloudmentor.academy
       http:
         paths:
           - path: /
